# proof_of_storage

./: .gitignore  Cargo.toml  README.md
privacy_transaction/: Cargo.toml
privacy_transaction/src/: CryptoBulletin.rs  main.rs  mod.rs  ring_signature.rs
proof_of_space/: Cargo.toml
proof_of_space/src/: main.rs
proof_of_space/src/circuit/: mimc3_df_circuit.rs  mimc5_hash_circuit.rs  mod.rs  pow_circuit.rs  sloth_circuit.rs
proof_of_space/src/proof_of_space/: pospace.rs
proof_of_storage/: Cargo.toml
proof_of_storage/src/: main.rs
proof_of_storage/src/circuit/: sloth_circuit.rs
proof_of_storage/src/proof_of_storage/: common.rs  depend.rs  file_compare.py  merkle_tree.rs  mod.rs  postorage.rs  prover.rs  verifier.rs
proof_of_storage/src/vde/: mod.rs  rug_sloth.rs  rug_vde.rs  sloth.rs  test_modpow.py  vde.rs
proof_of_storage/src/zk_vde/: mod.rs  sloth.rs
src/: convert.rs  data.json  data.rs  data.txt  data_seal.rs  depend.rs  equal.rs  main.rs  mimc.rs  mimc_hash.rs  pos_data.txt  pow.rs  proof_of_space.rs  seal_data.txt  vde.rs  y_collect.json  y_collect.txt
src/circuit/: equal_circuit.rs  mimc3_df_circuit.rs  mimc5_df_circuit.rs  mimc5_hash_circuit.rs  mimc7_hash_circuit.rs  mimc_df_circuit.rs  mimc_hash_circuit.rs  mimc_vde_circuit.rs  mod.rs  pos_circuit.rs  pospace_circuit.rs  pow_circuit.rs  sloth_circuit.rs
src/common/: convert.rs  data.rs  mimc.rs  mimc_df.rs  mimc_hash.rs  mod.rs
src/data_seal/: common.rs  data_seal.rs  depend.rs  mod.rs  seal.rs  seal_data  seal_data.txt  unseal.rs
src/mimc/: mimc_df.rs  mimc_hash.rs  mod.rs
src/privacy_transaction/: CryptoBulletin.rs  mod.rs  privacy_transaction.rs  ring_signature.rs  ring_signature_modify.rs
src/proof_of_space/: convert.rs  mod.rs  pos.rs  pos_data  pos_data.txt  pospace.rs  prover.rs  verifier.rs
src/proof_of_storage/: common.rs  data_seal.rs  depend.rs  file_compare.py  merkle_tree.rs  mod.rs  postorage.rs  postorage_modify.rs  prover.rs  prover_modify.rs  seal.rs  unseal.rs  verifier.rs  verifier_modify.rs
src/vde/: cc.py  cc.rs  compare_modpow.rs  mod.rs  prime.py  rug_sloth.rs  rug_vde.rs  sloth.rs  test_modpow.py  vde.rs
