[package]
name = "proof_of_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
rand = "0.8"
bellman = "0.13.1"
bls12_381 = "0.7.0"
ff = "0.12"
group = "0.12"
pairing = { version = "0.22", optional = true }

num-bigint = "0.4"
num-integer = "0.1.44"