[package]
name = "proof_of_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitvec = "1"
# bellman = "0.13.1"
# bls12_381 = "0.7.0"
# ff = "0.12"
# group = "0.12"
# pairing = { version = "0.22", optional = true }

rand = "0.8"
ark-groth16 = { version = "0.3.0", default-features = false}
ark-ff = { version = "0.3.0", default-features = false }
ark-ec = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
ark-relations = { version = "0.3.0", default-features = false}
ark-r1cs-std = { version = "0.3.0", default-features = false, optional = true }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }

num-bigint = "0.4"
rs_merkle = "1.2"

rug = "1.19.2"
md-5 = "0.9.1"

curve25519-dalek = "3.2.1"
sha3 = "0.9.0"
blake3 = "1.3.3"