[package]
name = "privacy_transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_core = "0.5"
fujisaki_ringsig = "0.1.1"

ed25519-dalek = "1.0.0"
rust-crypto = "0.2.36"
libc = "0.2.144"