[package]
name = "proof_of_space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

ark-groth16 = { version = "0.3.0", default-features = false}
ark-ff = { version = "0.3.0", default-features = false }
ark-ec = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
ark-relations = { version = "0.3.0", default-features = false}
ark-r1cs-std = { version = "0.3.0", default-features = false, optional = true }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }
