[package]
name = "proof_of_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

num-bigint = "0.4"
rs_merkle = "1.2"
rug = "1.19.2"
md-5 = "0.9.1"

blake3 = "1.3.3"

serde = { version = "1.0", features = ["derive"]}
bincode = "1.3.1"

threadpool = "1.8.1"